Added SEO meta tags and description

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Radiance Clinic</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Radiance Clinic</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Radiance Homoeopathy Clinic in Ulhasnagar offers specialized holistic treatments for chronic and acute conditions including Autism, Skin disorders, and more. Led by Dr. Sonal Yadav." />
+  <meta name="keywords"
+    content="Homeopathy, Ulhasnagar, Dr Sonal Yadav, Radiance Clinic, Homeopathic Doctor, Autism Treatment, Skin Specialist, Holistic Medicine" />
+  <meta name="author" content="Dr. Sonal Yadav" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://radiancehomeocare.com/" />
+  <meta property="og:title" content="Radiance Homoeopathy Clinic - Ray of Hope for Hopeless" />
+  <meta property="og:description"
+    content="Expert homeopathic care in Ulhasnagar by Dr. Sonal Yadav. Treating Autism, Skin issues, Women's health, and more with a holistic approach." />
+  <meta property="og:image" content="/favicon.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://radiancehomeocare.com/" />
+  <meta property="twitter:title" content="Radiance Homoeopathy Clinic" />
+  <meta property="twitter:description"
+    content="Expert homeopathic care in Ulhasnagar. Holistic treatment for chronic diseases." />
+  <meta property="twitter:image" content="/favicon.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
