Added Google verification tag

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   <meta property="twitter:description"
     content="Expert homeopathic care in Ulhasnagar. Holistic treatment for chronic diseases." />
   <meta property="twitter:image" content="/favicon.png" />
+
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="EUkpmHOHpIZEdCrmTvK1oqOe2KITpUrAqP5DXAOEhfo" />
 </head>
 
 <body>
