Fixed domain name in SEO files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://radiancehomeocare.com/" />
+  <meta property="og:url" content="https://www.drsonalyadav.com/" />
   <meta property="og:title" content="Radiance Homoeopathy Clinic - Ray of Hope for Hopeless" />
   <meta property="og:description"
     content="Expert homeopathic care in Ulhasnagar by Dr. Sonal Yadav. Treating Autism, Skin issues, Women's health, and more with a holistic approach." />
@@ -24,7 +24,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://radiancehomeocare.com/" />
+  <meta property="twitter:url" content="https://www.drsonalyadav.com/" />
   <meta property="twitter:title" content="Radiance Homoeopathy Clinic" />
   <meta property="twitter:description"
     content="Expert homeopathic care in Ulhasnagar. Holistic treatment for chronic diseases." />
